[gd_scene load_steps=6 format=3 uid="uid://c2cq7miu0eg0q"]

[ext_resource type="Shader" path="res://main.gdshader" id="1_l7w8a"]
[ext_resource type="Script" path="res://pause_screen.gd" id="1_rh38h"]
[ext_resource type="Texture2D" uid="uid://d1d6rumtmbi4k" path="res://assets/deck_background.png" id="2_yp62p"]
[ext_resource type="FontFile" uid="uid://bw8tebfadoyd6" path="res://assets/fonts/Minecraft.ttf" id="3_a08j0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vdfq6"]
shader = ExtResource("1_l7w8a")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.03
shader_parameter/aberration = 0.01
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.135
shader_parameter/vignette_opacity = 0.5

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rh38h")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vdfq6")
scale = Vector2(0.5, 0.557391)
texture = ExtResource("2_yp62p")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemsContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/ItemsContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_a08j0")
theme_override_font_sizes/normal_font_size = 40
text = "Pausa"
fit_content = true
autowrap_mode = 0

[node name="RestartButton" type="Button" parent="CenterContainer/ItemsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_a08j0")
text = "Reiniciar
"

[connection signal="pressed" from="CenterContainer/ItemsContainer/RestartButton" to="." method="_on_restart_button_pressed"]
